fix bugs, login, register by calling api,...

--- a/src/app/cart-page/cart-page.component.html
+++ b/src/app/cart-page/cart-page.component.html
@@ -1,1 +1,16 @@
-<p>cart-page works!</p>
+<div class="cart-container">
+  <div class="cart-header">
+    Review your bag (current ... product)
+  </div>
+  <div class="cart-body">
+    <app-prd-item></app-prd-item>
+  </div>
+  <div class="cart-footer">
+    <div class="footer-subtotal">
+
+    </div>
+    <div class="footer-total">
+
+    </div>
+  </div>
+</div>
