--- a/src/app/main-page/book-list/book-list.component.html
+++ b/src/app/main-page/book-list/book-list.component.html
@@ -16,5 +16,5 @@
       </ng-template>
     </div>
   </div>
-  <button (click)="onTest()">Click here</button>
+  <!-- <button (click)="onTest()">Click here</button> -->
 </div>
