raw layout for cart page

--- a/src/app/cart-page/cart-page.component.html
+++ b/src/app/cart-page/cart-page.component.html
@@ -1,9 +1,12 @@
 <div class="cart-container">
   <div class="cart-header">
     Review your bag (current ... product)
+    <hr>
   </div>
   <div class="cart-body">
-    <app-prd-item></app-prd-item>
+    <nz-list>
+        <app-prd-item></app-prd-item>
+    </nz-list>
   </div>
   <div class="cart-footer">
     <div class="footer-subtotal">
