--- a/src/app/cart-page/cart-page.component.html
+++ b/src/app/cart-page/cart-page.component.html
@@ -5,7 +5,7 @@
         <div *ngSwitchCase="true"> Review your bag (current {{ totalBook }} products)</div>
       </div>
       <div *ngSwitchCase="1"> Review your bag (current {{ totalBook }} products)</div>
-      <div *ngSwitchCase="0">You have not add any products!</div>
+      <div *ngSwitchCase="0">You haven't added any products!</div>
     </div>
     <hr>
   </div>
