--- a/src/app/account-page/register-account/register-account.component.css
+++ b/src/app/account-page/register-account/register-account.component.css
@@ -13,3 +13,7 @@ input.ng-invalid.ng-touched,
 .ant-input-number.ng-touched.ng-dirty.ng-invalid{
   border: 1px solid red;
 }
+
+.arlert-msg{
+  color: #A00000;
+}
