--- a/src/app/cart-page/cart-page.component.css
+++ b/src/app/cart-page/cart-page.component.css
@@ -1,9 +1,34 @@
-.cart-container{
+.cart-container {
   padding: 20px 80px;
 
-  .cart-header{
+  .cart-header {
     font-size: 22px;
     font-weight: 500;
     margin-bottom: 22px;
   }
+
+  .cart-footer {
+
+    .footer-item, .footer-total {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 5px;
+      font-size: 16px;
+      font-weight: 500;
+
+      .item_title {
+        color: rgba(0, 0, 0, 0.7);
+      }
+    }
+    .footer-total {
+      align-items: center;
+
+      .total_price{
+        font-size: 20px;
+      }
+    }
+
+  }
+
+
 }
