apply observablefor cart section

--- a/src/app/cart-page/cart-page.component.css
+++ b/src/app/cart-page/cart-page.component.css
@@ -28,6 +28,16 @@
       }
     }
 
+    .footer-checkout{
+      display: flex;
+      justify-content: flex-end;
+
+      .btn-checkout{
+        width: 100%;
+        letter-spacing: 0.5px;
+        font-weight: 500;
+      }
+    }
   }
 
 
