--- a/src/app/cart-page/cart-page.component.html
+++ b/src/app/cart-page/cart-page.component.html
@@ -42,6 +42,11 @@
           {{totalPriceAfterVAT | currency}}
         </div>
       </div>
+      <div class="footer-checkout">
+        <button class="btn btn-outline-success btn-checkout">
+          Checkout
+        </button>
+      </div>
     </div>
   </ng-template>
 </div>
