--- a/src/app/account-page/login-account/login-account.component.html
+++ b/src/app/account-page/login-account/login-account.component.html
@@ -48,7 +48,7 @@
         <button type="submit" style="width: 100%;" class="btn btn-primary btn-block mb-4">Sign in</button>
 
         <div class="text-center">
-          <p>Not a member? <a href="#!">Register</a></p>
+          <p>Not a member? <a routerLink="/register">Register</a></p>
         </div>
       </form>
     </div>
