--- a/src/app/account-page/register-account/register-account.component.html
+++ b/src/app/account-page/register-account/register-account.component.html
@@ -29,6 +29,7 @@
       </nz-radio-group>
     </div>
 
+    <div class="arlert-msg" *ngIf="!registerForm.get('phoneNumber')?.valid && registerForm.get('phoneNumber')?.touched">Phone number must have 10 digits!</div>
     <div class="form-floating mb-3">
       <input type="number" class="form-control"
             name="phoneNumber" formControlName="phoneNumber"
