--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -1,1 +1,85 @@
-<p>checkout-page works!</p>
+<div class="checkout-container row">
+  <h2>Purchase Order</h2>
+  <hr>
+  <div class="checkout-information col-7">
+    <form [formGroup]="checkoutForm" class="checkout-form">
+      <h5 class="form_title"><span class="checkout-label-number">1</span>PERSONAL INFORMATION</h5>
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" name="fullName" formControlName="fullName" placeholder="Full Name">
+        <label>Full Name</label>
+      </div>
+
+      <div class="form-floating mb-3">
+        <label class="arlert-msg"
+          *ngIf="!checkoutForm.get('phoneNumber')?.valid && checkoutForm.get('phoneNumber')?.touched">
+          Phone number must have 10 digits!
+        </label>
+        <input type="number" class="form-control" name="phoneNumber" formControlName="phoneNumber"
+          placeholder="Phone Number">
+        <label>Phone Number</label>
+      </div>
+
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" name="email" formControlName="email" placeholder="Email">
+        <label>Email</label>
+      </div>
+
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" name="address" formControlName="address" placeholder="Address">
+        <label>Address</label>
+      </div>
+
+      <h5 class="form_title"><span class="checkout-label-number">2</span>PAYMENT OPTIONS</h5>
+      <div class="form-check mb-2">
+        <input class="form-check-input" type="radio" name="paymentMethod" value="cash" checked>
+        <label class="form-check-label">
+          <img class="payments-icon" src="../../assets/icons/cash.svg">
+          Payment in cash
+        </label>
+      </div>
+      <div class="form-check mb-2">
+        <input class="form-check-input" type="radio" name="paymentMethod" value="zalopay">
+        <label class="form-check-label">
+          <img class="payments-icon" src="../../assets/icons/zalopay.svg">
+          ZaloPay
+        </label>
+      </div>
+      <div class="form-check mb-2">
+        <input class="form-check-input" type="radio" name="paymentMethod" value="atm">
+        <label class="form-check-label">
+          <img class="payments-icon" src="../../assets/icons/Atm.svg">
+          ATM
+        </label>
+      </div>
+      <div class="form-check mb-2">
+        <input class="form-check-input" type="radio" name="paymentMethod" value="visa">
+        <label class="form-check-label">
+          <img class="payments-icon" src="../../assets/icons/visa-master-vcb.svg">
+          Visa/Master/JCB
+        </label>
+      </div>
+
+      <button [disabled]="!checkoutForm.valid" style="width: 100%;" class="btn btn-primary btn-block mb-3">
+        <span nz-icon nzType="shopping-cart" nzTheme="outline"></span>
+        Purchase
+      </button>
+    </form>
+  </div>
+
+  <div class="checkout-review col-5">
+    <div class="review-summary">
+      <nz-card style="width:100%;" nzTitle="Your Order">
+
+        <app-review-item></app-review-item>
+        <div class="review-subfee">
+
+        </div>
+        <span class="dot-divider"></span>
+        <div class="review-total">
+          <div>Total: </div>
+          <div>200$</div>
+        </div>
+      </nz-card>
+    </div>
+  </div>
+</div>
