display user value and summary cart for checkout

--- a/src/app/account-page/register-account/register-account.component.html
+++ b/src/app/account-page/register-account/register-account.component.html
@@ -8,6 +8,11 @@
     </div>
 
     <div class="form-floating mb-3">
+      <input type="email" class="form-control" name="email" formControlName="email" placeholder="email">
+      <label>Email</label>
+    </div>
+
+    <div class="form-floating mb-3">
       <input type="password" class="form-control" name="password" formControlName="password" placeholder="Password">
       <label>Password</label>
     </div>
