--- a/src/app/cart-page/cart-page.component.html
+++ b/src/app/cart-page/cart-page.component.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="footer-checkout">
-        <button class="btn btn-outline-success btn-checkout">
+        <button routerLink="/checkout" class="btn btn-outline-success btn-checkout">
           Checkout
         </button>
       </div>
