--- a/src/app/checkout-page/review-item/review-item.component.html
+++ b/src/app/checkout-page/review-item/review-item.component.html
@@ -1,4 +1,4 @@
 <p class="review-item-container">
-  <span class="item-title">Book Name</span>
-  <span class="item-prices">99$</span>
+  <span class="item-title">{{ bookItem.bookName}}</span>
+  <span class="item-prices">{{ bookItem.totalPrice }}</span>
 </p>
