--- a/src/app/checkout-page/checkout-page.component.css
+++ b/src/app/checkout-page/checkout-page.component.css
@@ -1,48 +1,47 @@
 .checkout-container {
-  padding: 35px 50px;
-}
+  padding: 35px 60px;
 
-.checkout-information {
+  .checkout-information {
 
+    .checkout-form {
 
-  .checkout-form {
+      .form_title {
+        font-size: 17px;
+        margin: 10px 0;
+      }
 
-    .form_title {
-      font-size: 17px;
-      margin: 10px 0;
-    }
+      .form_title:last-child {
+        margin: 18px 0;
+      }
 
-    .form_title:last-child {
-      margin: 18px 0;
-    }
+      .checkout-label-number {
+        display: inline-block;
+        width: 22px;
+        height: 22px;
+        background-color: grey;
+        text-align: center;
+        border-radius: 50%;
+        margin-right: 10px;
+        color: white;
+      }
 
-    .checkout-label-number {
-      display: inline-block;
-      width: 22px;
-      height: 22px;
-      background-color: grey;
-      text-align: center;
-      border-radius: 50%;
-      margin-right: 10px;
-      color: white;
-    }
-
-    .payments-icon {
-      margin: 0 8px;
+      .payments-icon {
+        margin: 0 8px;
+      }
     }
   }
-}
 
-.checkout-review {
+  .checkout-review {
 
-  .review-summary {
-    margin-top: 15px;
+    .review-summary {
+      margin-top: 15px;
 
-    .review-total{
-      display: flex;
-      justify-content: space-between;
-      font-size: 18px;
-      font-weight: 500;
+      .footer_item {
+        display: flex;
+        justify-content: space-between;
+        font-size: 16px;
+        font-weight: 500;
+      }
     }
   }
 }
