remove mainpage component, mess denied payment

--- a/src/app/checkout-page/checkout-page.component.css
+++ b/src/app/checkout-page/checkout-page.component.css
@@ -36,6 +36,11 @@
     .review-summary {
       margin-top: 15px;
 
+      .summary-header {
+        font-size: 16px;
+        font-weight: 500;
+      }
+
       .footer_item {
         display: flex;
         justify-content: space-between;
