--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -31,28 +31,28 @@
 
       <h5 class="form_title"><span class="checkout-label-number">2</span>PAYMENT OPTIONS</h5>
       <div class="form-check mb-2">
-        <input class="form-check-input" type="radio" name="paymentMethod" value="cash" checked>
+        <input #cashMethod class="form-check-input" type="radio" name="paymentMethod" value="cash" checked>
         <label class="form-check-label">
           <img class="payments-icon" src="../../assets/icons/cash.svg">
           Payment in cash
         </label>
       </div>
       <div class="form-check mb-2">
-        <input class="form-check-input" type="radio" name="paymentMethod" value="zalopay">
+        <input (change)="functionComingSoon()" class="form-check-input" type="radio" name="paymentMethod" value="zalopay">
         <label class="form-check-label">
           <img class="payments-icon" src="../../assets/icons/zalopay.svg">
           ZaloPay
         </label>
       </div>
       <div class="form-check mb-2">
-        <input class="form-check-input" type="radio" name="paymentMethod" value="atm">
+        <input (change)="functionComingSoon()" class="form-check-input" type="radio" name="paymentMethod" value="atm">
         <label class="form-check-label">
           <img class="payments-icon" src="../../assets/icons/Atm.svg">
           ATM
         </label>
       </div>
       <div class="form-check mb-2">
-        <input class="form-check-input" type="radio" name="paymentMethod" value="visa">
+        <input (change)="functionComingSoon()" class="form-check-input" type="radio" name="paymentMethod" value="visa">
         <label class="form-check-label">
           <img class="payments-icon" src="../../assets/icons/visa-master-vcb.svg">
           Visa/Master/JCB
@@ -69,7 +69,7 @@
   <div class="checkout-review col-5">
     <div class="review-summary">
       <div class="card mb-3">
-        <div class="card-header bg-transparent">Your Order</div>
+        <div class="card-header bg-transparent summary-header">Your Order</div>
         <div class="card-body">
           <div class="list-group-item" *ngFor="let item of summaryCart">
             <app-review-item [bookItem]="item">
@@ -99,5 +99,4 @@
       </div>
     </div>
   </div>
-
 </div>
