--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -59,7 +59,7 @@
         </label>
       </div>
 
-      <button [disabled]="!checkoutForm.valid" style="width: 100%;" class="btn btn-primary btn-block mb-3">
+      <button (click)="onTest()" [disabled]="!checkoutForm.valid" style="width: 100%;" class="btn btn-primary btn-block mb-3">
         <span nz-icon nzType="shopping-cart" nzTheme="outline"></span>
         Purchase
       </button>
