--- a/src/app/checkout-page/review-item/review-item.component.css
+++ b/src/app/checkout-page/review-item/review-item.component.css
@@ -4,5 +4,10 @@
 
   .item-title {}
 
-  .item-prices {}
+  .item-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 18%;
+  }
 }
