raw code ngrx store

--- a/src/app/account-page/login-account/login-account.component.html
+++ b/src/app/account-page/login-account/login-account.component.html
@@ -49,6 +49,7 @@
 
         <div class="text-center">
           <p>Not a member? <a routerLink="/register">Register</a></p>
+          <button type="button" (click)="Test()">Test Test</button>
         </div>
       </form>
     </div>
