login, logout, userInfo with ngrx, refactor

--- a/src/app/account-page/user-info/user-info.component.html
+++ b/src/app/account-page/user-info/user-info.component.html
@@ -1,11 +1,11 @@
-<!-- <div class="user-info-container row d-flex align-items-center" *ngIf="currentUser$ | async as user"> -->
-<div class="user-info-container row d-flex ">
-  <div class="col-4 d-flex flex-column align-items-center justify-content-center bg-gradient p-0 full-height user-block_image" >
+<div *ngIf="vm$ | async as vm" class="user-info-container row d-flex">
+  <div
+    class="col-4 d-flex flex-column align-items-center justify-content-center bg-gradient p-0 full-height user-block_image">
     <div class="img-container">
-      <img class="img-fluid" [src]="currentUser.imagePath" />
+      <img class="img-fluid" [src]="vm.currentUser?.imagePath" />
     </div>
     <h4 class="user-short-des">
-      {{ currentUser.username }}
+      {{vm.currentUser?.username}}
     </h4>
   </div>
   <div class="col-8 user-block_info">
@@ -14,7 +14,7 @@
         <span class="item-icon" nz-icon nzType="contacts" nzTheme="outline"></span>
         Account Information
       </li>
-      <li nz-menu-item >
+      <li nz-menu-item>
         <span class="item-icon" nz-icon nzType="audit" nzTheme="outline"></span>
         Receipt
       </li>
@@ -23,15 +23,15 @@
     <div class="user_info">
       <div class="info-item">
         <span class="item-icon" nz-icon nzType="user" nzTheme="outline"></span>
-        Full Name:&nbsp;{{ currentUser.fullName }}
+        Full Name:&nbsp;{{vm.currentUser?.fullName}}
       </div>
       <div class="info-item">
         <span class="item-icon" nz-icon [nzRotate]="115" nzType="phone" nzTheme="outline"></span>
-        Phone:&nbsp;{{ currentUser.phoneNumber }}
+        Phone:&nbsp;{{ vm.currentUser?.phoneNumber }}
       </div>
       <div class="info-item">
         <span class="item-icon" nz-icon nzType="home" nzTheme="outline"></span>
-        Address:&nbsp;{{ currentUser.address }}
+        Address:&nbsp;{{ vm.currentUser?.address }}
       </div>
     </div>
     <div class="user-receipt">
