--- a/src/app/account-page/login-account/login-account.component.html
+++ b/src/app/account-page/login-account/login-account.component.html
@@ -1,7 +1,7 @@
 <div class="form-container">
   <div class="tab-content">
     <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="tab-login">
-      <form (ngSubmit)="onSubmit()">
+      <form (ngSubmit)="onAuthLogin()">
         <div class="text-center mb-3">
           <p>Sign in with:</p>
           <button type="button" class="btn btn-link btn-floating mx-1">
@@ -24,11 +24,11 @@
         <p class="text-center">or:</p>
 
         <div class="form-floating mb-3">
-          <input type="email" class="form-control" name="username" placeholder="name@example.com" [(ngModel)]="username" required>
+          <input type="email" class="form-control" name="username" placeholder="user" [(ngModel)]="username" required>
           <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="password" required>
+          <input type="password" class="form-control" name="password" placeholder="1" [(ngModel)]="password" required>
           <label for="floatingPassword">Password</label>
         </div>
 
@@ -49,7 +49,7 @@
 
         <div class="text-center">
           <p>Not a member? <a routerLink="/register">Register</a></p>
-          <button type="button" (click)="Test()">Test Test</button>
+          <!-- <button type="button" (click)="Test()">Test Test</button> -->
         </div>
       </form>
     </div>
