raw functions CRUD cart page

--- a/src/app/account-page/login-account/login-account.component.html
+++ b/src/app/account-page/login-account/login-account.component.html
@@ -4,21 +4,21 @@
       <form (ngSubmit)="onAuthLogin()">
         <div class="text-center mb-3">
           <p>Sign in with:</p>
-          <button type="button" class="btn btn-link btn-floating mx-1">
+          <a target="_blank" href="https://www.facebook.com/Nhhd.sayHiToU" class="btn btn-link btn-floating mx-1">
             <span nz-icon nzType="facebook" nzTheme="outline" class="nav-icon"></span>
-          </button>
+          </a>
 
-          <button type="button" class="btn btn-link btn-floating mx-1">
+          <a target="_blank" href="mailto:hongducnguyenho0@gmail.com" class="btn btn-link btn-floating mx-1">
             <span nz-icon nzType="google-circle" nzTheme="fill" class="nav-icon"></span>
-          </button>
+          </a>
 
-          <button type="button" class="btn btn-link btn-floating mx-1">
+          <a target="_blank" href="https://twitter.com/Nguync45192622" class="btn btn-link btn-floating mx-1">
             <span nz-icon nzType="twitter-circle" nzTheme="fill" class="nav-icon"></span>
-          </button>
+          </a>
 
-          <button type="button" class="btn btn-link btn-floating mx-1">
+          <a target="_blank" href="https://github.com/nguyenduc2710" class="btn btn-link btn-floating mx-1">
             <span nz-icon nzType="github" nzTheme="fill" class="nav-icon"></span>
-          </button>
+          </a>
         </div>
 
         <p class="text-center">or:</p>
