--- a/src/app/cart-page/cart-page.component.html
+++ b/src/app/cart-page/cart-page.component.html
@@ -46,6 +46,7 @@
         <button routerLink="/checkout" class="btn btn-outline-success btn-checkout">
           Checkout
         </button>
+        <button (click)="test()">test</button>
       </div>
     </div>
   </ng-template>
