--- a/src/app/cart-page/prd-item/prd-item.component.html
+++ b/src/app/cart-page/prd-item/prd-item.component.html
@@ -1,7 +1,7 @@
 <div class="product-item row">
   <div class="item-left col-9">
     <div class="item-image-block">
-      <img class="img-fluid item-image" [src]="bookItem.cover" alt="The halo">
+      <img class="img-fluid item-image" [src]="bookItem.cover" alt="Image">
     </div>
     <div class="item-description">
       <div class="description_title">
