fix product not disapear after purchased, bill sto

--- a/src/app/account-page/login-account/login-account.component.html
+++ b/src/app/account-page/login-account/login-account.component.html
@@ -3,7 +3,7 @@
     <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="tab-login">
       <form (ngSubmit)="onAuthLogin()">
         <div class="text-center mb-3">
-          <p>Sign in with:</p>
+          <p>Contact me with:</p>
           <a target="_blank" href="https://www.facebook.com/Nhhd.sayHiToU" class="btn btn-link btn-floating mx-1">
             <span nz-icon nzType="facebook" nzTheme="outline" class="nav-icon"></span>
           </a>
@@ -21,7 +21,7 @@
           </a>
         </div>
 
-        <p class="text-center">or:</p>
+        <p class="text-center">-Login-</p>
 
         <div class="form-floating mb-3">
           <input type="email" class="form-control" name="username" placeholder="user" [(ngModel)]="username" required>
