--- a/src/app/account-page/user-info/user-info.component.html
+++ b/src/app/account-page/user-info/user-info.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="vm$ | async as vm" class="user-info-container row d-flex">
+<div *ngIf="accountVm$ | async as accVm" class="user-info-container row d-flex">
   <div
     class="col-4 d-flex flex-column align-items-center justify-content-center bg-gradient p-0 full-height user-block_image">
     <div class="img-container">
-      <img class="img-fluid" [src]="vm.currentUser?.imagePath" />
+      <img class="img-fluid" [src]="accVm.currentUser?.imagePath" />
     </div>
     <h4 class="user-short-des">
-      {{vm.currentUser?.username}}
+      {{ accVm.currentUser?.username }}
     </h4>
   </div>
   <div class="col-8 user-block_info">
@@ -20,23 +20,29 @@
       </li>
     </ul>
 
-    <div class="user_info">
+    <!-- <div class="user_info">
       <div class="info-item">
         <span class="item-icon" nz-icon nzType="user" nzTheme="outline"></span>
-        Full Name:&nbsp;{{vm.currentUser?.fullName}}
+        Full Name:&nbsp;{{accVm.currentUser?.fullName}}
       </div>
       <div class="info-item">
         <span class="item-icon" nz-icon [nzRotate]="115" nzType="phone" nzTheme="outline"></span>
-        Phone:&nbsp;{{ vm.currentUser?.phoneNumber }}
+        Phone:&nbsp;{{ accVm.currentUser?.phoneNumber }}
       </div>
       <div class="info-item">
         <span class="item-icon" nz-icon nzType="home" nzTheme="outline"></span>
-        Address:&nbsp;{{ vm.currentUser?.address }}
+        Address:&nbsp;{{ accVm.currentUser?.address }}
       </div>
-    </div>
-    <div class="user-receipt">
+      <button class="btn btn-outline-danger" routerLink="/book" (click)="onLogout()">Logout</button>
+    </div> -->
+    <div *ngIf="billsVm$ | async as billsVm" class="user-receipt">
+      <app-user-receipt
+      *ngFor="let bill of billsVm.userBills"
 
+      ></app-user-receipt>
+      <app-user-receipt
+
+      ></app-user-receipt>
     </div>
-    <button class="btn btn-outline-danger" routerLink="/book" (click)="onLogout()">Logout</button>
   </div>
 </div>
