--- a/src/app/account-page/user-info/user-info.component.css
+++ b/src/app/account-page/user-info/user-info.component.css
@@ -1,59 +1,69 @@
-.user-info-container{
+.user-info-container {
   margin: 25px 35px;
-  border: 1px solid rgba(0,0,0,0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+  position: relative;
+
+  .bg-gradient {
+    background: linear-gradient(to right, #4B90FF, #72A4FF, #99B8FF, #C0CCFF, #E7E0FF);
+  }
+
+  .user-block_image {
+    border-right: 1px solid rgb(203 203 203);
+    min-height: 75vh;
+
+    .img-container {
+      margin-bottom: 14px;
+    }
+
+    .user-short-des {
+      font-weight: 400;
+      font-size: 21px;
+      font-style: italic;
+    }
+  }
+
+  .user-block_info {
+    padding: 16px 12px;
+
+    .user-navigation {
+      margin-bottom: 20px;
+      display: flex;
+      align-items: center;
+      font-size: 20px;
+    }
+
+    .user_info {
+      min-height: 50vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+
+      .info-item {
+        display: flex;
+        align-items: center;
+        margin-bottom: 4px;
+        font-size: 18px;
+      }
+    }
+
+    .item-icon {
+      margin-right: 5px;
+      font-size: inherit;
+    }
+
+    .logout-btn{
+      position: absolute;
+      bottom: 2.5%;
+    }
+
+    .user-receipt{
+      margin-bottom: 70px;
+    }
+  }
+
 }
-.user-info-container:last-child{
+
+.user-info-container:last-child {
   justify-content: flex-start;
-}
-.bg-gradient{
-  background: linear-gradient(to right, #4B90FF, #72A4FF, #99B8FF, #C0CCFF, #E7E0FF);
-}
-
-.full-height{
-  min-height: 75vh;
-}
-
-.user-block_image{
-  border-right: 1px solid rgb(203 203 203);
-}
-
-.img-container {
-  margin-bottom: 14px;
-}
-
-.user-short-des {
-  font-weight: 400;
-  font-size: 21px;
-  font-style: italic;
-}
-
-.user-block_info {
-  padding: 16px 12px;
-}
-
-.user-navigation{
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-}
-
-.user_info{
-  min-height: 50vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.info-item{
-  display: flex;
-  align-items: center;
-  margin-bottom: 4px;
-  font-size: 18px;
-}
-
-.item-icon{
-  margin-right: 5px;
-  font-size: inherit;
 }
