--- a/src/app/account-page/user-info/user-info.component.html
+++ b/src/app/account-page/user-info/user-info.component.html
@@ -1,6 +1,5 @@
 <div *ngIf="accountVm$ | async as accVm" class="user-info-container row d-flex">
-  <div
-    class="col-4 d-flex flex-column align-items-center justify-content-center bg-gradient p-0 full-height user-block_image">
+  <div class="col-4 d-flex flex-column align-items-center justify-content-center bg-gradient p-0 user-block_image">
     <div class="img-container">
       <img class="img-fluid" [src]="accVm.currentUser?.imagePath" />
     </div>
@@ -10,17 +9,17 @@
   </div>
   <div class="col-8 user-block_info">
     <ul nz-menu nzMode="horizontal" class="user-navigation">
-      <li nz-menu-item nzSelected>
+      <li (click)="onViewReceipt()" nz-menu-item nzSelected>
         <span class="item-icon" nz-icon nzType="contacts" nzTheme="outline"></span>
         Account Information
       </li>
-      <li nz-menu-item>
+      <li (click)="onViewReceipt()" nz-menu-item>
         <span class="item-icon" nz-icon nzType="audit" nzTheme="outline"></span>
         Receipt
       </li>
     </ul>
 
-    <!-- <div class="user_info">
+    <div *ngIf="!viewReceipt" class="user_info">
       <div class="info-item">
         <span class="item-icon" nz-icon nzType="user" nzTheme="outline"></span>
         Full Name:&nbsp;{{accVm.currentUser?.fullName}}
@@ -33,13 +32,12 @@
         <span class="item-icon" nz-icon nzType="home" nzTheme="outline"></span>
         Address:&nbsp;{{ accVm.currentUser?.address }}
       </div>
-    </div> -->
-    <div *ngIf="billsVm$ | async as billsVm" class="user-receipt">
-      <app-user-receipt
-      *ngFor="let bill of billsVm.userBills"
-      [receipt]="bill"
-      ></app-user-receipt>
     </div>
-    <button class="btn btn-outline-danger" routerLink="/book" (click)="onLogout()">Logout</button>
+    <ng-container *ngIf="viewReceipt">
+      <div *ngIf="billsVm$ | async as billsVm" class="user-receipt">
+        <app-user-receipt *ngFor="let bill of billsVm.userBills" [receipt]="bill"></app-user-receipt>
+      </div>
+    </ng-container>
+    <button class="btn btn-outline-danger logout-btn" routerLink="/book" (click)="onLogout()">Logout</button>
   </div>
 </div>
