--- a/src/app/checkout-page/checkout-page.component.html
+++ b/src/app/checkout-page/checkout-page.component.html
@@ -37,7 +37,7 @@
           Payment in cash
         </label>
       </div>
-      <div class="form-check mb-2">
+      <div class="form-check mb-2 feature-unsupported">
         <input (change)="functionComingSoon()" class="form-check-input" type="radio" name="paymentMethod"
           value="zalopay">
         <label class="form-check-label">
@@ -45,14 +45,14 @@
           ZaloPay
         </label>
       </div>
-      <div class="form-check mb-2">
+      <div class="form-check mb-2 feature-unsupported">
         <input (change)="functionComingSoon()" class="form-check-input" type="radio" name="paymentMethod" value="atm">
         <label class="form-check-label">
           <img class="payments-icon" src="../../assets/icons/Atm.svg">
           ATM
         </label>
       </div>
-      <div class="form-check mb-2">
+      <div class="form-check mb-2 feature-unsupported">
         <input (change)="functionComingSoon()" class="form-check-input" type="radio" name="paymentMethod" value="visa">
         <label class="form-check-label">
           <img class="payments-icon" src="../../assets/icons/visa-master-vcb.svg">
