--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,13 @@
-.body-container{
-  min-height: 85vh;
+.app-container {
+  /* height: 100%; */
+  min-height: 100vh;
   position: relative;
-}
 
-.validate-account{
-  padding: 30px 50px;
+  .body-container {
+    height: 100%;
+  }
+
+  .validate-account {
+    padding: 30px 50px;
+  }
 }
