--- a/src/app/admin/admin-page/admin-page.component.html
+++ b/src/app/admin/admin-page/admin-page.component.html
@@ -54,11 +54,18 @@
     </nz-header>
     <nz-content>
       <nz-breadcrumb>
-        <nz-breadcrumb-item>User</nz-breadcrumb-item>
-        <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
+        <nz-breadcrumb-item>Overview</nz-breadcrumb-item>
+        <span>
+          <nz-date-picker nzMode="year" [(ngModel)]="date" (ngModelChange)="onChangeCalendar($event)"></nz-date-picker>
+        </span>
       </nz-breadcrumb>
-      <div class="inner-content">Eyzo where is my form</div>
+      <div class="inner-content row">
+        <div class="chart-container col-8">
+          <canvas id="MyChart">{{ chart }}</canvas>
+        </div>
+      </div>
     </nz-content>
     <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
   </nz-layout>
 </nz-layout>
+
